fixing spacing

--- a/src/components/ResolutionModal/ChooseResolutionModal.scss
+++ b/src/components/ResolutionModal/ChooseResolutionModal.scss
@@ -1,14 +1,6 @@
 @import '@red-hat-insights/insights-frontend-components/Utilities/_mixins.scss';
 
 .ins-c-resolution-modal {
-
-    .ins-c-resolution-choice__details {
-        .pf-l-stack__item:not(:first-of-type) {
-            @include rem('margin-left', 15px);
-        }
-    }
-
-    .ins-c-resolution-option .pf-c-check{
-        align-content: baseline;
-    }
+    .ins-c-resolution-choice__details { @include rem("margin-left", 5px); }
+    .ins-c-resolution-option .pf-c-check { align-items: baseline; }
 }
